# pystubs-generation

./: .gitignore  LICENSE  README.md  bootstrap.py  config.json  generate-stubs.py  main.py  pyproject.toml  setup.cfg  setup.py
.github/: default.yml
.github/workflows/: default.yml  documentation.yml  linting.yml  pull_request.yml  pypi-publish.yml
configs/: config-2.3.0.yml  config-2.3.0a10.json  config-2.3.0a12.json  config-2.3.0a9.json  config-2.3.yml  config-2.4.yml  config-2.5.yml  config-2.6.yml
doc/source/: conf.py  mobase.rst  modules.rst
docs/: requirements.txt
docs/source/: conf.py  faq.rst  index.rst  plugin-types.rst  setup-tools.rst  writing-plugins.rst
generator/: __init__.py  loader.py  mtypes.py  parser.py  register.py  types.py  utils.py  writer.py
src/mo2/stubs/generator/: __init__.py  __main__.py  loader.py  mtypes.py  parser.py  register.py  utils.py  writer.py
stubs/: mobase.pyi
stubs/2.2.2.1/: mobase.pyi
stubs/2.3.0/: mobase.pyi
stubs/2.3.0a10/: mobase.pyi
stubs/2.3.0a11/: mobase.pyi
stubs/2.3.0a12/: mobase.pyi
stubs/2.3.0a8/: mobase.pyi
stubs/2.3.0a9/: mobase.pyi
stubs/2.3.2/: mobase.pyi
stubs/2.4.0/: mobase.pyi
stubs/2.5.0/: mobase.pyi
stubs/2.5.0/mobase-stubs/: __init__.pyi
stubs/2.5.0/mobase-stubs/widgets/: __init__.pyi
stubs/2.5.1/mobase-stubs/: __init__.pyi
stubs/2.5.1/mobase-stubs/widgets/: __init__.pyi
stubs/2.5.2/mobase-stubs/: __init__.pyi
stubs/2.5.2/mobase-stubs/widgets/: __init__.pyi
stubs/2.5.3/mobase-stubs/: __init__.pyi
stubs/2.5.3/mobase-stubs/widgets/: __init__.pyi
stubs/2.6.0/mobase-stubs/: __init__.pyi
stubs/2.6.0/mobase-stubs/widgets/: __init__.pyi
stubs/setup/: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
stubs/setup/mobase-stubs/: __init__.pyi
