[tool.poetry]
name = "mo2-pystubs-generation"
version = "0.1.0"
description = ""
authors = ["Holt59 <capelle.mikael@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "mo2", from = "src" }]

[tool.poetry.scripts]
mo2-stubs-generator = "mo2.stubs.generator.__main__:main"

[tool.poetry.dependencies]
python = "^3.12"
pyqt6 = "^6.7.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.365"
ruff = "^0.4.7"
types-pyyaml = "^6.0.12.20240311"
poethepoet = "^0.26.1"

[tool.poetry.group.doc.dependencies]
sphinx-rtd-theme = "^2.0.0"
sphinx-autodoc-typehints = "^2.1.0"
sphinx-automodapi = "^0.16.0"
sphinx = "^7.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
format-imports = "ruff check --select I src --fix"
format-ruff = "ruff format src"
format.sequence = ["format-imports", "format-ruff"]
lint-ruff = "ruff check src"
lint-ruff-format = "ruff format --check src"
lint-pyright = "pyright src"
lint.sequence = ["lint-ruff", "lint-ruff-format", "lint-pyright"]
lint.ignore_fail = "return_non_zero"

[tool.flake8]
max-line-length = 88
# See https://github.com/PyCQA/pycodestyle/issues/373
extend-ignore = ['E203', 'E231']
per-file-ignores = ['*.pyi:E301,E302,E305,E501,E701']

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
extend-select = ["B", "Q", "I"]

[tool.ruff.lint.isort]
known-first-party = ['tas']

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["astropy.units.Quantity"]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = true
