[project]
name = "mo2-pystubs-generation"
description = ""
license = "MIT"
version = "0.1.0"
readme = "README.md"
authors = [{ name = "Holt59", email = "capelle.mikael@gmail.com" }]
requires-python = ">=3.12,<4.0"
dependencies = [
    "pyqt6 (==6.11.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
]

[project.scripts]
mo2-stubs-generator = "mo2.stubs.generator.__main__:main"

[build-system]
requires = ['poetry-core (>=2.0,<3.0)']
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "mo2", from = "src" }]

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.409"
ruff = "^0.15.12"
types-pyyaml = "^6.0.12.20260508"
poethepoet = "^0.45.0"

[tool.poetry.group.doc.dependencies]
sphinx-rtd-theme = "^3.0.2"
sphinx-autodoc-typehints = "^3.2.0"
sphinx-automodapi = "^0.20.0"
sphinx = "^8.2.3"
sphinx-autoapi = "^3.6.0"

[tool.poe.tasks]
format-imports = "ruff check --select I src --fix"
format-ruff = "ruff format src"
format.sequence = ["format-imports", "format-ruff"]
lint-ruff = "ruff check src"
lint-ruff-format = "ruff format --check src"
lint-pyright = "pyright src"
lint.sequence = ["lint-ruff", "lint-ruff-format", "lint-pyright"]
lint.ignore_fail = "return_non_zero"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["B", "Q", "I"]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = true
